cambie de lista inmutable (.toList();) a lista mutable (.Collect(Collectors.toList());)